--- a/pages/register/css/register-building.css
+++ b/pages/register/css/register-building.css
@@ -31,5 +31,9 @@ p {
     margin: auto;
 }
 button {
-    background-color: 6b8f71;
+    background-color: #6b8f71;
+    border-radius: 10px;
+    border: 1px solid black;
+    color: black;
+    font-weight: bold;
 }
