--- a/pages/register/css/register-building.css
+++ b/pages/register/css/register-building.css
@@ -30,10 +30,47 @@ p {
 .center {
     margin: auto;
 }
-button {
-    background-color: #6b8f71;
-    border-radius: 10px;
+button,select,input[type=submit] {
+    background-color: #38543c;
+    border-radius: 9px;
     border: 1px solid black;
     color: black;
     font-weight: bold;
+    font-size: 13px;
+    transition-duration : 0.1s;
+    color: white;
+    padding: 3px;
 }
+button:hover {
+    background-color: #446349;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.24), 0 10px 20px 0 rgba(0,0,0,0.19);
+}
+input[type=text] {
+    background-color: #80c28b;
+    border-radius: 10px;
+    padding: 3px;
+    transition-duration: 0.2s;
+    border: 2px solid #364a39;
+    outline: none ! important;
+}
+input[type=text]:hover:not(:focus) {
+    background-color: #a5d6ad;
+}
+input[type=text]:focus {
+    background-color: #314735;
+    border: 2px solid #8abf93;
+    outline: none ! important;
+    color: #b5f5c0;
+}
+.district_street_unit_container{
+    margin: auto;
+    text-align: center;
+}
+.building
+
+
+
+
+
+
+
