--- a/pages/register/css/register-building.css
+++ b/pages/register/css/register-building.css
@@ -66,7 +66,11 @@ input[type=text]:focus {
     margin: auto;
     text-align: center;
 }
-.building
+.building_type_container {
+    border: none;
+    padding: 20px;
+    text-align: center;
+}
 
 
 
