--- a/pages/register/css/register-building.css
+++ b/pages/register/css/register-building.css
@@ -80,7 +80,11 @@ h3 {
     text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
     text-align: center;
 }
-.
+.building_type_container {
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 5px;
+}
 
 
 
