--- a/pages/register/css/register-building.css
+++ b/pages/register/css/register-building.css
@@ -38,7 +38,7 @@ button,select,input[type=submit] {
     color: black;
     font-weight: bold;
     font-size: 13px;
-    transition-duration : 0.1s;
+    transition-duration : 0.2s;
     color: white;
     padding: 3px;
 }
@@ -46,7 +46,7 @@ button:hover {
     background-color: #446349;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.24), 0 10px 20px 0 rgba(0,0,0,0.19);
 }
-input[type=text] {
+input[type=text],textarea {
     background-color: #80c28b;
     border-radius: 10px;
     padding: 3px;
@@ -54,10 +54,10 @@ input[type=text] {
     border: 2px solid #364a39;
     outline: none ! important;
 }
-input[type=text]:hover:not(:focus) {
+input[type=text]:hover:not(:focus),textarea:hover:not(:focus) {
     background-color: #a5d6ad;
 }
-input[type=text]:focus {
+input[type=text]:focus,textarea:focus {
     background-color: #314735;
     border: 2px solid #8abf93;
     outline: none ! important;
@@ -99,10 +99,7 @@ h3 {
 br {
     margin-bottom: 10px;
 }
-textarea {
-    resize: none;
-    text-align: center;
-}
+
 
 
 
