--- a/pages/register/css/register-building.css
+++ b/pages/register/css/register-building.css
@@ -103,7 +103,6 @@ textarea {
     width: 90%;
     margin-right: 5%;
     margin-left: 5%;
-    margin-top: 2%;
     height: 100px;
 }
 .description_container {
@@ -111,6 +110,11 @@ textarea {
     background-color: #aad2ba;
     padding: 10px;
     border-radius: 10px;
+    text-align: center;
+}
+#optional_details_header {
+    border-bottom: solid 1px black;
+    padding-bottom: 4px;
 }
 
 
