--- a/pages/register/css/register-building.css
+++ b/pages/register/css/register-building.css
@@ -46,7 +46,7 @@ button:hover {
     background-color: #446349;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.24), 0 10px 20px 0 rgba(0,0,0,0.19);
 }
-input[type=text],textarea {
+input[type=text],textarea,input[type=date] {
     background-color: #80c28b;
     border-radius: 10px;
     padding: 3px;
@@ -54,10 +54,10 @@ input[type=text],textarea {
     border: 2px solid #364a39;
     outline: none ! important;
 }
-input[type=text]:hover:not(:focus),textarea:hover:not(:focus) {
+input[type=text]:hover:not(:focus),textarea:hover:not(:focus),input[type=date]:hover:not(:focus) {
     background-color: #a5d6ad;
 }
-input[type=text]:focus,textarea:focus {
+input[type=text]:focus,textarea:focus,input[type=date]:focus {
     background-color: #314735;
     border: 2px solid #8abf93;
     outline: none ! important;
@@ -116,7 +116,14 @@ textarea {
     border-bottom: solid 1px black;
     padding-bottom: 4px;
 }
-
+#construction_container {
+    margin-top: 2%;
+    text-align: center;
+}
+#cencus_container {
+    margin-top: 2%;
+    text-align: center;
+}
 
 
 
