--- a/index.css
+++ b/index.css
@@ -1,14 +1,14 @@
 a {
     display: block;
     padding: 8px;
-    background-color: #dddddd;
+    background-color: #454647;
 }
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #464a4d;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -16,8 +16,25 @@ ul {
 
 li a {
     display: block;
-    color: white;
+    color: #fcfcfc;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+}
+
+.navbar_button {
+
+}
+
+li a:hover {
+    background-color: #1d1f21;
+}
+.navbar_button_li {
+    float: left;
+}
+.navbar_button {
+
+}
+#login_button_li {
+    float: right;
 }
