--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
 html * {
     font-family: 'Heebo', sans-serif;
 }
+
+.navbar_container_ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
