--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,14 @@ html * {
     padding: 14px 16px;
     text-decoration: none;
 }
+
+.navbar_container {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #464a4d;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+}
