--- a/css/main.css
+++ b/css/main.css
@@ -21,3 +21,15 @@ html * {
     position: sticky;
     top: 0;
 }
+
+.navbar_container_ul li a:hover {
+    background-color: #1d1f21;
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
