--- a/css/browse.css
+++ b/css/browse.css
@@ -2,6 +2,10 @@ body {
     margin: 0px;
 }
 
-#search_box_container p {
+#search_box_container {
     text-align: center;
+    margin: 1%;
+    padding: 1%px;
+    border: 2px solid black;
+    border-radius: 10px;
 }
