--- a/css/login.css
+++ b/css/login.css
@@ -6,7 +6,23 @@ body {
     text-align: center;
 }
 input[type=text] {
-    border: 1px solid black;
-    border-radius: 10px;
+    border: 2px solid black;
+    border-radius: 20px;
     padding: 3px;
+    font-size: 20px;
+    padding: 6px;
+    width: 20%;
+    text-align: center;
+}
+input[type=submit] {
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 3px;
+    font-size: 20px;
+    width: 21%;
+    height: 40px;
+    margin-top: 100px;
+}
+br {
+    margin-bottom: 1%;
 }
