--- a/css/login.css
+++ b/css/login.css
@@ -13,6 +13,7 @@ input[type=text] {
     padding: 6px;
     width: 20%;
     text-align: center;
+    margin-top: 10px;
 }
 input[type=submit] {
     border: 2px solid black;
