--- a/css/building_info.css
+++ b/css/building_info.css
@@ -4,3 +4,13 @@ body {
 #main_container {
     margin: 10px;
 }
+#side_box {
+    padding: 5px;
+    background-color: lightblue;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    width: 40%;
+    border: 1px solid black;
+    font-size: 20px;
+    max-width: 400px;
+}
