--- a/css/building_info.css
+++ b/css/building_info.css
@@ -13,4 +13,14 @@ body {
     border: 1px solid black;
     font-size: 20px;
     max-width: 400px;
+    float: left;
+}
+.type_container {
+    border: 1px solid black;
+    border-radius: 10px;
+    float: right;
+    width: 55%;
+    padding: 5px;
+    margin-bottom: 5px;
+    background-color: lightblue;
 }
